create a sample method to create contact after insert account

--- a/force-app/main/default/classes/CreateNewContact.cls
+++ b/force-app/main/default/classes/CreateNewContact.cls
@@ -1,9 +1,12 @@
 public with sharing class CreateNewContact {
-    
-    public static void createContact(List<Accouunt> newAccounts){
-        for(Accouunt a:newAccounts){
 
+    public static void createContact(List<Account> newAccounts){
+        List<Contact> contactList=new List<Contact>();
+        for(Account a:newAccounts){
+            System.debug(a);
+            contactList.add(new Contact(FirstName='foo', LastName='bar', AccountId=a.id));
         }
+        System.debug(contactList);
+        insert contactList;
     }
-
 }
