add trigger Contact

--- a/force-app/main/default/classes/AfterAccountHandler.cls
+++ b/force-app/main/default/classes/AfterAccountHandler.cls
@@ -1,6 +1,6 @@
 public with sharing class AfterAccountHandler extends TriggerHandler{
-    
+    List<Account> account = Trigger.new;
     public override void afterInsert(){
-        CreateNewContact.createContact(Trigger.new);
+        CreateNewContact.createContact(account);
     }
 }
