--- a/force-app/main/default/classes/CheckGenederContact_Test.cls
+++ b/force-app/main/default/classes/CheckGenederContact_Test.cls
@@ -16,6 +16,7 @@ public with sharing class CheckGenederContact_Test {
         System.assertEquals(lastName,c.lastName);
         System.assertEquals(gender,c.Gender__c);
     }
+    @isTest
     static void checkGenderWhenIsFemale(){
         //given
         String firstname = 'foo';
@@ -25,13 +26,19 @@ public with sharing class CheckGenederContact_Test {
         Account a=new Account(name='ValidName');
         insert a;
         Contact c = [SELECT firstName, lastName, Gender__c FROM Contact WHERE AccountId =:a.id];
+        System.debug(c.firstName);
+        System.debug(c.lastName);
+        System.debug(c.Gender__c);
         c.firstName = 'Weronika';
         update c;
-        c = [SELECT firstName, lastName, Gender__c FROM Contact WHERE AccountId =:a.id];
+        Contact c1 = [SELECT firstName, lastName, Gender__c FROM Contact AccountId =:a.id];
+        System.debug(c1.firstName);
+        System.debug(c1.lastName);
+        System.debug(c1.Gender__c);
         //then
         
-        System.assertEquals(firstName,c.firstName);
-        System.assertEquals(lastName,c.lastName);
-        System.assertEquals(gender,c.Gender__c);
+        System.assertEquals('Weronika',c1.firstName);
+        System.assertEquals(lastName,c1.lastName);
+        System.assertEquals(gender,c1.Gender__c);
     }
 }
