repair test checkGenderWhenIsFemaleAfterUpdate

--- a/force-app/main/default/classes/CheckGenederContact_Test.cls
+++ b/force-app/main/default/classes/CheckGenederContact_Test.cls
@@ -17,13 +17,15 @@ public with sharing class CheckGenederContact_Test {
         System.assertEquals(gender,c.Gender__c);
     }
     @isTest
-    static void checkGenderWhenIsFemale(){
+    static void checkGenderWhenIsFemaleAfterUpdate(){
         
         //given
         String firstname = 'foo';
         String lastname = 'bar';
         String gender = 'Female';
+
         //when
+
         Account a=new Account(name='ValidName');
         insert a;
         Contact c = [SELECT firstName, lastName, Gender__c FROM Contact WHERE AccountId =:a.id];
@@ -32,10 +34,8 @@ public with sharing class CheckGenederContact_Test {
         System.debug(c.Gender__c);
         c.firstName = 'Weronika';
         update c;
-        Contact c1 = [SELECT firstName, lastName, Gender__c FROM Contact AccountId =:a.id];
-        System.debug(c1.firstName);
-        System.debug(c1.lastName);
-        System.debug(c1.Gender__c);
+        Contact c1 = [SELECT firstName, lastName, Gender__c FROM Contact WHERE AccountId =:a.id];
+
         //then
         
         System.assertEquals('Weronika',c1.firstName);
