add test but % coverage is still the same

--- a/force-app/main/default/classes/CheckGenederContact_Test.cls
+++ b/force-app/main/default/classes/CheckGenederContact_Test.cls
@@ -29,9 +29,6 @@ public with sharing class CheckGenederContact_Test {
         Account a=new Account(name='ValidName');
         insert a;
         Contact c = [SELECT firstName, lastName, Gender__c FROM Contact WHERE AccountId =:a.id];
-        System.debug(c.firstName);
-        System.debug(c.lastName);
-        System.debug(c.Gender__c);
         c.firstName = 'Weronika';
         update c;
         Contact c1 = [SELECT firstName, lastName, Gender__c FROM Contact WHERE AccountId =:a.id];
@@ -40,6 +37,46 @@ public with sharing class CheckGenederContact_Test {
         
         System.assertEquals('Weronika',c1.firstName);
         System.assertEquals(lastName,c1.lastName);
+        System.assertEquals(gender,c1.Gender__c);
+    }
+    @isTest
+    static void checkGenderWhenInsertContactIsMale(){
+        
+        //given
+        String firstnameValid = 'foo';
+        String lastnameValid = 'bar';
+        String gender='Male';
+
+        //when
+        Contact c=new Contact(firstName=firstnameValid, lastName=lastnameValid);
+        insert c;
+        System.debug(c.id);
+        Contact c1=[SELECT firstName,lastName,Gender__c FROM Contact WHERE id=:c.id];
+
+        //then
+        
+        System.assertEquals(firstnameValid,c1.firstName);
+        System.assertEquals(lastnameValid,c1.lastName);
+        System.assertEquals(gender,c1.Gender__c);
+    }
+    @isTest
+    static void checkGenderWhenInsertContactIsFemale(){
+        
+        //given
+        String firstnameValid = 'Weronika';
+        String lastnameValid = 'bar';
+        String gender='Female';
+
+        //when
+        Contact c=new Contact(firstName=firstnameValid, lastName=lastnameValid);
+        insert c;
+        System.debug(c.id);
+        Contact c1=[SELECT firstName,lastName,Gender__c FROM Contact WHERE id=:c.id];
+
+        //then
+        
+        System.assertEquals(firstnameValid,c1.firstName);
+        System.assertEquals(lastnameValid,c1.lastName);
         System.assertEquals(gender,c1.Gender__c);
     }
 }
