--- a/force-app/main/default/classes/CreateNewContact_Test.cls
+++ b/force-app/main/default/classes/CreateNewContact_Test.cls
@@ -10,6 +10,7 @@ public with sharing class CreateNewContact_Test {
         Account a=new Account(name='ValidName');
         insert a;
         //then
+        System.assertEquals(a,[SELECT name FROM Account WHERE id=:a.id]);
         Contact c = [SELECT firstName, lastName FROM Contact WHERE AccountId =:a.id];
         System.assertEquals(firstName,c.firstName);
         System.assertEquals(lastName,c.lastName);
