--- a/force-app/main/default/classes/CarTriggerHandler.cls
+++ b/force-app/main/default/classes/CarTriggerHandler.cls
@@ -1,11 +1,11 @@
 public without sharing class CarTriggerHandler extends TriggerHandler{
     
     public override void beforeDelete(){
-        List<Car__c> cars=Trigger.old;
+        Map<Id,Car__c> cars=Trigger.oldMap;
         ChangeAccountBudget.increaseBudget(cars);
     }
     public override void afterInsert(){
-        List<Car__c> cars=Trigger.new;
+        Map<Id,Car__c> cars=Trigger.newMap;
         ChangeAccountBudget.reductionBudget(cars);
     }
 }
