add a work change contact budget after  car delete and insert

--- a/force-app/main/default/classes/CarTriggerHandler.cls
+++ b/force-app/main/default/classes/CarTriggerHandler.cls
@@ -1,11 +1,12 @@
 public without sharing class CarTriggerHandler extends TriggerHandler{
     
     public override void beforeDelete(){
-        Map<Id,Car__c> cars=Trigger.oldMap;
+        Map<Id,Car__c> cars = (Map<Id,Car__c>) Trigger.oldMap;
         ChangeAccountBudget.increaseBudget(cars);
     }
+    
     public override void afterInsert(){
-        Map<Id,Car__c> cars=Trigger.newMap;
+        Map<Id,Car__c> cars = (Map<Id,Car__c>)Trigger.newMap;
         ChangeAccountBudget.reductionBudget(cars);
     }
 }
