--- a/force-app/main/default/classes/ChangeAccountBudget.cls
+++ b/force-app/main/default/classes/ChangeAccountBudget.cls
@@ -1,10 +1,11 @@
 public without sharing class ChangeAccountBudget {
-    public static void increaseBudget(Map<id,Car__c> cars){
-        List<Contact> contactsToUpdate=new List<Contact>();
-        List<Contact> contacts=[SELECT  id, Contact_budget__c FROM Contact];
-        for (Car__c car : cars.values()) {
-            for (Contact contact : contacts) {
-                if(contact.id.equals(car.Contacts__c)){
+
+    public static void increaseBudget( Map<id,Car__c> carsMap){
+        List<Contact> contactsToUpdate = new List<Contact>();
+        List<Contact> allContactsList = [SELECT  id, Contact_budget__c FROM Contact];
+        for( Car__c car : carsMap.values()) {
+            for( Contact contact : allContactsList) {
+                if( contact.id.equals( car.Contacts__c)){
                     contact.Contact_budget__c += car.Value__c;
                     contactsToUpdate.add(contact);
                 }
@@ -12,14 +13,14 @@ public without sharing class ChangeAccountBudget {
         }
         update contactsToUpdate;
     }
-    public static void reductionBudget(Map<id, Car__c> cars){
 
+    public static void reductionBudget(Map<id, Car__c> carsMap){
         List<Contact> contactsToUpdate=new List<Contact>();
-        List<Contact> contacts=[SELECT  id, Contact_budget__c FROM Contact];
-        for (Car__c car : cars) {
-            for (Contact contact : contacts) {
+        List<Contact> allContactsList=[SELECT  id, Contact_budget__c FROM Contact];
+        for (Car__c car : carsMap.values()) {
+            for (Contact contact : allContactsList) {
                 if(contact.id.equals(car.Contacts__c)){
-                    contact.Contact_budget__c -= car.Value__c;
+                    contact.Contact_budget__c = contact.Contact_budget__c - car.Purchase_price__c;
                     contactsToUpdate.add(contact);
                 }
             }
