Add contact trigger and add ChangeAccountBudgets class

--- a/force-app/main/default/classes/AfterAccountHandler.cls
+++ b/force-app/main/default/classes/AfterAccountHandler.cls
@@ -1,6 +1,7 @@
 public with sharing class AfterAccountHandler extends TriggerHandler{
-    List<Account> account = Trigger.new;
+
     public override void afterInsert(){
-        CreateNewContact.createContact(account);
+        List<Account> newAccounts = Trigger.new;
+        CreateNewContact.createContact(newAccounts);
     }
 }
