--- a/force-app/main/default/classes/ContactTriggerHandler.cls
+++ b/force-app/main/default/classes/ContactTriggerHandler.cls
@@ -1,16 +1,17 @@
 public with sharing class ContactTriggerHandler extends TriggerHandler{
     
     public override void beforeInsert(){
-        List<Contact> contacts=Trigger.new;
+        List<Contact> contacts = Trigger.new;
         CheckGenederContact.checkGender(contacts);
     }
     public override void beforeUpdate(){
-        List<Contact> contacts=Trigger.new;
+        List<Contact> contacts = Trigger.new;
         CheckGenederContact.checkGender(contacts);
     }
     public override void afterUpdate(){
         List<Contact> newContacts = Trigger.new;
         List<Contact> oldContacts = Trigger.old;
-        ChangeAccountBudgets.changeBudget(newContacts, oldContacts);
+        System.debug(newContacts);
+        ChangeAccountBudgets.isBudgetUpdate(newContacts, oldContacts);
     }
 }
