--- a/force-app/main/default/classes/ChangeAccountBudgets.cls
+++ b/force-app/main/default/classes/ChangeAccountBudgets.cls
@@ -2,8 +2,6 @@ public without sharing class ChangeAccountBudgets {
 
     public static void isBudgetUpdate(List<Contact> newContacts, List<Contact> oldContacts){
         Map<Contact, Double> contactsAfterBudgetUpdate = new Map<Contact, double>();
-        List<Account> allAccounts = [SELECT Budget__c, id FROM Account];
-        List<Account> accountsToUpdate = new List<Account>();
         for(Contact newContact : newContacts){
             for(Contact oldContact : oldContacts){
                 if(oldContact.id == newContact.id && oldContact.Contact_budget__c != newContact.Contact_budget__c){
@@ -12,17 +10,21 @@ public without sharing class ChangeAccountBudgets {
             }   
         }
 
+        updateAccountBudget(contactsAfterBudgetUpdate);
+    }
+
+    private static void updateAccountBudget(Map<Contact,Double> contactsAfterBudgetUpdate){
+        List<Account> allAccounts = [SELECT Budget__c, id FROM Account];
+        List<Account> accountsToUpdate = new List<Account>();
         for(Account account : allAccounts){
             for(Contact contact : contactsAfterBudgetUpdate.keySet()){
                 if(account.id == contact.AccountId){
-                    System.debug(contactsAfterBudgetUpdate.get(contact));
-                    System.debug(account.Budget__c);
                     account.Budget__c = account.Budget__c + contactsAfterBudgetUpdate.get(contact);
-                    System.debug(account.Budget__c);
                     accountsToUpdate.add(account);
                 }
             }
         }
         update accountsToUpdate;
     }
+
 }
