refactoring class and trigger name

--- a/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -1,4 +1,4 @@
-public with sharing class AfterAccountHandler extends TriggerHandler{
+public with sharing class AccountTriggerHandler extends TriggerHandler{
 
     public override void afterInsert(){
         List<Account> newAccounts = Trigger.new;
