--- a/force-app/main/default/classes/ChangeAccountWallet.cls
+++ b/force-app/main/default/classes/ChangeAccountWallet.cls
@@ -1,6 +1,6 @@
 public without sharing class ChangeAccountWallet {
     
-    public static void isBudgetUpdate(List<Contact> newContacts, List<Contact> oldContacts){
+    public static void isWalletUpdate(List<Contact> newContacts, List<Contact> oldContacts){
         Map<Contact, Double> contactsAfterWalletUpdate = new Map<Contact, double>();
         for(Contact newContact : newContacts){
             for(Contact oldContact : oldContacts){
@@ -10,17 +10,16 @@ public without sharing class ChangeAccountWallet {
             }   
         }
 
-        updateAccountBudget(contactsAfterWalletUpdate);
+        updateAccountWallet(contactsAfterWalletUpdate);
     }
 
-    private static void updateAccountBudget(Map<Contact,Double> contactsAfterWalletUpdate){
+    private static void updateAccountWallet(Map<Contact, Double> contactsAfterWalletUpdate){
         List<Account> allAccounts = [SELECT Account_Wallet__c, id, Budget__c FROM Account];
         List<Account> accountsToUpdate = new List<Account>();
         for(Account account : allAccounts){
             for(Contact contact : contactsAfterWalletUpdate.keySet()){
                 if(account.id == contact.AccountId){
                     account.Account_Wallet__c = account.Account_Wallet__c + contactsAfterWalletUpdate.get(contact);
-                    account.Expenses__c = account.Budget__c - account.Account_Wallet__c;
                     accountsToUpdate.add(account);
                 }
             }
