--- a/force-app/main/default/classes/CarTriggerHandler.cls
+++ b/force-app/main/default/classes/CarTriggerHandler.cls
@@ -1,12 +1,13 @@
 public without sharing class CarTriggerHandler extends TriggerHandler{
     
     public override void beforeDelete(){
-        List<Car__c> cars = Trigger.old;
-        ChangeContactWalletValue.increaseWallet(cars);
+        List<Car__c> newCars = Trigger.old;
+        ChangeContactWalletValue.increaseWallet(newCars);
     }
 
     public override void afterInsert(){
-        List<Car__c> cars =Trigger.new;
-        ChangeContactWalletValue.reductionWallet(cars);
+        List<Car__c> newCars = Trigger.new;
+        ChangeContactWalletValue.reductionWallet(newCars);
     }
+
 }
