--- a/force-app/main/default/classes/ContactTriggerHandler.cls
+++ b/force-app/main/default/classes/ContactTriggerHandler.cls
@@ -11,6 +11,6 @@ public with sharing class ContactTriggerHandler extends TriggerHandler{
     public override void afterUpdate(){
         List<Contact> newContacts = Trigger.new;
         List<Contact> oldContacts = Trigger.old;
-        ChangeAccountWallet.isBudgetUpdate(newContacts, oldContacts);
+        ChangeAccountWallet.isWalletUpdate(newContacts, oldContacts);
     }
 }
