--- a/force-app/main/default/classes/CheckGenederContact.cls
+++ b/force-app/main/default/classes/CheckGenederContact.cls
@@ -1,17 +1,29 @@
 public with sharing class CheckGenederContact {
-    public static void checkGender(List<Contact> contact){
-        List<Contact> retur = new List<Contact>();
-        for(Contact c:contact){
-            c.Gender__c=whichGender(c.FirstName);
-            retur.add(c);
+    public static void checkGender(List<Contact> contacts){
+        List<Contact> contactsToCheckGender = new List<Contact>();
+        for(Contact contact : contacts){
+            contact.Gender__c=whichGender(contact.FirstName);
+            contactsToCheckGender.add(contact);
         } 
     }
     private static String whichGender(String firstname){
         String a = firstname.right(2);
-        if( a.equals('na') || a.equals('ta') || a.equals('ia') || a.equals('wa') ||
-            a.equals('ja') || a.equals('la') || a.equals('da') || a.equals('ła') ||
-            a.equals('ra') || a.equals('ża') || a.equals('sa') || a.equals('ga') || 
-            a.equals('za') || a.equals('ka')){
+        List<String> endNameTemplates = new List<String>();
+        endNameTemplates.add('na');
+        endNameTemplates.add('ta');
+        endNameTemplates.add('ia');
+        endNameTemplates.add('wa');
+        endNameTemplates.add('ja');
+        endNameTemplates.add('la');
+        endNameTemplates.add('da');
+        endNameTemplates.add('ła');
+        endNameTemplates.add('ra');
+        endNameTemplates.add('ża');
+        endNameTemplates.add('sa');
+        endNameTemplates.add('ga');
+        endNameTemplates.add('za');
+        endNameTemplates.add('ka');
+        if(endNameTemplates.equals(endNameTemplates) ){
                 return 'Female';
             }
         return 'Male';
